--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -20,13 +20,13 @@
         android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
         android:label="@string/home_second"
         tools:layout="@layout/fragment_home_second">
-        <action
-            android:id="@+id/action_HomeSecondFragment_to_HomeFragment"
-            app:destination="@id/navigation_home" />
 
         <argument
             android:name="myArg"
             app:argType="string" />
+        <action
+            android:id="@+id/action_navigation_home_second_to_movieFragment"
+            app:destination="@id/navigation_movie" />
     </fragment>
 
     <fragment
@@ -40,4 +40,13 @@
         android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+    <fragment
+        android:id="@+id/navigation_movie"
+        android:name="com.gmail.eamosse.imdb.ui.home.MovieFragment"
+        android:label="@string/title_movie"
+        tools:layout="@layout/fragment_movie" >
+        <argument
+            android:name="myArg"
+            app:argType="string" />
+    </fragment>
 </navigation>
