--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,4 +40,14 @@
         android:name="com.gmail.eamosse.imdb.ui.notifications.NotificationsFragment"
         android:label="@string/title_notifications"
         tools:layout="@layout/fragment_notifications" />
+
+    <fragment
+        android:id="@+id/navigation_settings"
+        android:name="com.gmail.eamosse.imdb.ui.settings.SettingsFragment"
+        android:label="@string/title_settings"/>
+
+    <fragment
+        android:id="@+id/navigation_about"
+        android:name="com.gmail.eamosse.imdb.ui.about.AboutFragment"
+        android:label="@string/title_about"/>
 </navigation>
