--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/navigation_home"
-        android:name="com.gmail.eamosse.imdb.ui.home.HomeFragment"
+        android:name="com.gmail.eamosse.imdb.ui.home.fragment.HomeFragment"
         android:label="@string/title_home"
         tools:layout="@layout/fragment_home">
 
@@ -17,7 +17,7 @@
     </fragment>
     <fragment
         android:id="@+id/navigation_home_second"
-        android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
+        android:name="com.gmail.eamosse.imdb.ui.home.fragment.HomeSecondFragment"
         android:label="@string/home_second"
         tools:layout="@layout/fragment_home_second">
 
@@ -42,7 +42,7 @@
         tools:layout="@layout/fragment_notifications" />
     <fragment
         android:id="@+id/navigation_movie"
-        android:name="com.gmail.eamosse.imdb.ui.home.MovieFragment"
+        android:name="com.gmail.eamosse.imdb.ui.home.fragment.MovieFragment"
         android:label="@string/title_movie"
         tools:layout="@layout/fragment_movie" >
         <argument
