--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -44,7 +44,7 @@
                     android:contentDescription="@string/app_name"
                     android:src="@drawable/ic_baseline_image_24" />
 
-                <androidx.appcompat.widget.AppCompatTextView
+                <com.google.android.material.textview.MaterialTextView
                     android:id="@+id/category_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
