--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -15,6 +15,7 @@
             android:id="@+id/action_HomeFragment_to_HomeSecondFragment"
             app:destination="@id/navigation_home_second" />
     </fragment>
+
     <fragment
         android:id="@+id/navigation_home_second"
         android:name="com.gmail.eamosse.imdb.ui.home.HomeSecondFragment"
@@ -33,18 +34,34 @@
         android:id="@+id/navigation_discover"
         android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverFragment"
         android:label="@string/title_discover"
-        tools:layout="@layout/fragment_discover" />
+        tools:layout="@layout/fragment_discover">
+        <action
+            android:id="@+id/action_discover_to_discover_second"
+            app:destination="@id/navigation_discover_second" />
+    </fragment>
+
+    <fragment
+        android:id="@+id/navigation_discover_second"
+        android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverSecondFragment"
+        android:label="@string/title_discover_second"
+        tools:layout="@layout/fragment_discover_second">
+
+        <argument
+            android:name="myArg"
+            app:argType="string" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_favorites"
         android:name="com.gmail.eamosse.imdb.ui.favorites.FavoritesFragment"
         android:label="@string/title_favorites"
         tools:layout="@layout/fragment_favorites" />
+
     <fragment
         android:id="@+id/navigation_movie"
         android:name="com.gmail.eamosse.imdb.ui.home.MovieFragment"
         android:label="@string/title_movie"
-        tools:layout="@layout/fragment_movie" >
+        tools:layout="@layout/fragment_movie">
         <argument
             android:name="myArg"
             app:argType="string" />
@@ -53,10 +70,10 @@
     <fragment
         android:id="@+id/navigation_settings"
         android:name="com.gmail.eamosse.imdb.ui.settings.SettingsFragment"
-        android:label="@string/title_settings"/>
+        android:label="@string/title_settings" />
 
     <fragment
         android:id="@+id/navigation_about"
         android:name="com.gmail.eamosse.imdb.ui.about.AboutFragment"
-        android:label="@string/title_about"/>
+        android:label="@string/title_about" />
 </navigation>
