--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -58,7 +58,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/discover_hint"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        android:focusable="false">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/genreInput"
