--- a/app/src/main/res/layout/fragment_movie.xml
+++ b/app/src/main/res/layout/fragment_movie.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -25,33 +25,20 @@
 
             <TextView
                 android:id="@+id/title"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_view"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
+                app:layout_constraintTop_toBottomOf="@id/image_view" />
 
-            <ImageView
-                android:id="@+id/image_video_view"
+            <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
+                android:id="@+id/youtube"
                 android:layout_width="match_parent"
-                android:layout_height="223dp"
-                app:layout_constraintTop_toBottomOf="@id/title"
-                android:contentDescription="@string/video" />
-
-
-            <ImageButton
-                android:id="@+id/play_button"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@drawable/round_corner"
-                android:src="@drawable/ic_baseline_play_circle_filled_24"
-                app:layout_constraintBottom_toBottomOf="@id/image_video_view"
-                app:layout_constraintEnd_toEndOf="@id/image_video_view"
-                app:layout_constraintStart_toStartOf="@id/image_video_view"
-                app:layout_constraintTop_toTopOf="@id/image_video_view"
-                android:contentDescription="@string/play" />
+                app:showFullScreenButton="true"
+                />
 
             <TextView
                 android:id="@+id/production_companies"
@@ -63,7 +50,7 @@
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image_video_view" />
+                app:layout_constraintTop_toBottomOf="@id/youtube" />
 
             <TextView
                 android:id="@+id/production_companies_value"
@@ -82,13 +69,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/genres"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/production_companies_value"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/production_companies_value" />
 
             <TextView
                 android:id="@+id/genre_value"
@@ -107,13 +94,13 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/original_language"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/genre_value"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/genre_value" />
 
             <TextView
                 android:id="@+id/original_language_value"
@@ -132,19 +119,20 @@
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="@string/release_date"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/original_language_value"
-                android:layout_marginTop="10dp"/>
+                app:layout_constraintTop_toBottomOf="@id/original_language_value" />
 
             <TextView
                 android:id="@+id/release_date_value"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"
                 android:gravity="center_horizontal|center_vertical"
                 android:textSize="10sp"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -152,6 +140,6 @@
                 app:layout_constraintTop_toBottomOf="@id/release_date"
                 tools:ignore="SmallSp" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
     </androidx.core.widget.NestedScrollView>
 </layout>
