--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -51,14 +51,15 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/discover_hint"
         android:layout_margin="10dp"
-        android:focusable="false">
+        android:focusable="false"
+        app:endIconMode="clear_text" >
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/genreInput"
             android:layout_width="match_parent"
             android:layout_height="55dp"
             android:focusable="false"
-            android:focusableInTouchMode="true"
+            android:focusableInTouchMode="false"
             android:hint="@string/genre_help"
             android:inputType="none"
             android:paddingStart="15dp"
@@ -72,7 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/genreLabel"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:id="@+id/actorInput"
@@ -91,7 +93,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/actorLabel"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/yearInput"
