--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -31,7 +31,7 @@
 
     <fragment
         android:id="@+id/navigation_discover"
-        android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverFragment"
+        android:name="com.gmail.eamosse.imdb.ui.discover.fragment.DiscoverFragment"
         android:label="@string/title_discover"
         tools:layout="@layout/fragment_discover">
 
@@ -42,7 +42,7 @@
 
     <fragment
         android:id="@+id/navigation_discover_second"
-        android:name="com.gmail.eamosse.imdb.ui.discover.DiscoverSecondFragment"
+        android:name="com.gmail.eamosse.imdb.ui.discover.fragment.DiscoverSecondFragment"
         android:label="@string/title_discover_second"
         tools:layout="@layout/fragment_discover_second">
 
