--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -46,25 +46,23 @@
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/genreLabel"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/discover_hint"
         android:layout_margin="10dp"
-        android:focusable="false"
-        app:endIconMode="clear_text" >
+        app:endIconMode="clear_text">
 
-        <com.google.android.material.textfield.MaterialAutoCompleteTextView
+        <AutoCompleteTextView
             android:id="@+id/genreInput"
             android:layout_width="match_parent"
             android:layout_height="55dp"
-            android:focusable="false"
-            android:focusableInTouchMode="false"
             android:hint="@string/genre_help"
             android:inputType="none"
             android:paddingStart="15dp"
             android:paddingEnd="0dp"
-            android:textSize="16sp" />
+            android:textSize="16sp"
+            android:layout_alignParentStart="true"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
