--- a/app/src/main/res/menu/settings_nav_menu.xml
+++ b/app/src/main/res/menu/settings_nav_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/navigation_about"
+        android:icon="@drawable/ic_baseline_question_mark_24"
+        app:showAsAction="ifRoom"
+        android:title="@string/title_about" />
+
+    <item
         android:id="@+id/navigation_settings"
         android:icon="@drawable/ic_baseline_settings_24"
         app:showAsAction="always"
