--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -57,12 +57,13 @@
             android:id="@+id/genreInput"
             android:layout_width="match_parent"
             android:layout_height="55dp"
+            android:layout_alignParentStart="true"
             android:hint="@string/genre_help"
             android:inputType="none"
             android:paddingStart="15dp"
             android:paddingEnd="0dp"
             android:textSize="16sp"
-            android:layout_alignParentStart="true"/>
+            tools:ignore="DuplicateClickableBoundsCheck" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -72,6 +73,8 @@
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@+id/genreLabel"
         android:layout_margin="10dp"
+        app:helperTextEnabled="true"
+        app:helperText="@string/actor_helper_text"
         app:endIconMode="clear_text">
 
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
