--- a/app/src/main/res/layout/category_list_item.xml
+++ b/app/src/main/res/layout/category_list_item.xml
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/img"
+                    android:id="@+id/category_illustration"
                     android:layout_width="150dp"
                     android:layout_height="150dp"
                     android:layout_gravity="center_horizontal"
